<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        />
    <item
        android:id="@+id/analytics"
        android:icon="@drawable/ic_graph"
        android:title="@string/Analytics" />
    <item
        android:id="@+id/tracking"
        android:icon="@drawable/ic_pencil"
        android:title="@string/tracking" />
</menu>